<resources>
    <string name="app_name">MyTracker</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="tracker">Tracker</string>

<!--    //xml main_preference-->
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location Update time</string>
    <string name="location">Location</string>

    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="track_color">Track color</string>


</resources>